# chemistry-data-facto

./: .env.example  .spark-initial-sha  .vercelignore  3D_FEATURES_GUIDE.md  3D_RENDERING_SHOWCASE.md  ANALYSIS_NAVIGATION.md  ASSET_MANAGEMENT.md  CDN_INTEGRATION.md  CDN_QUICKSTART.md  CINEMATIC_INTEGRATION_GUIDE.md  CODE_CHALLENGES_GUIDE.md  CROWE_CODE_ARCHITECTURE.md  CROWE_CODE_README.md  CROWE_PLATFORM_ANALYSIS_2025.md  CUSTOM_VOICE_COMMANDS_GUIDE.md  DASHBOARD_README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  Dockerfile  EXECUTIVE_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  IMPROVEMENTS.md  LAUNCH_READINESS_ASSESSMENT.md  NEXT_STEPS_ROADMAP.md  ONBOARDING_GUIDE.md  PRD.md  PRODUCT_ANALYSIS_REPORT.md  PRODUCT_READINESS_ANALYSIS_2025.md  PR_ACTIONS_QUICK_REFERENCE.md  PR_REVIEW_SUMMARY.md  QUICKSTART_3D.md  README.md  TUTORIAL_SYSTEM.md  UX_DESIGN_PROPOSAL.md  VIDEO_TUTORIALS_GUIDE.md  VOICE_COMMANDS.md  (+17 more)
.github/: PR_REVIEW_CHECKLIST.md  copilot-instructions.md
backend/: .coverage  .pre-commit-config.yaml  Dockerfile  EXAMPLES.md  LICENSE  README.md  pyproject.toml  quickstart_backend.sh  requirements.txt  test_imports.py
backend/src/: api.py
backend/src/crowe_copilot/: __init__.py  chem_utils.py  cli.py  cli_spectra_parquet.py  cli_validate.py  config.py  descriptors.py  dose_response.py  io_local.py  io_registry.py  kg.py  kg_io.py  mixtures.py  models.py  ms_integration.py  orcid_client.py  pq_registry.py  pq_utils.py  settings.py  spectra_bridge.py  spectra_lsh.py  spectra_lsh_ppm.py  tabular.py  units.py  validated_data.py  zenodo_client.py  zip_bootstrap.py  zip_surface.py
backend/src/crowe_research_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/np_copilot/: ms_integration.py
backend/tests/: test_dose_response.py  test_kg.py  test_mixtures.py  test_models.py  test_pq_registry.py  test_rdkit.py  test_validated_data.py
public/: logo-3d.html
src/: App.tsx  index.css  main.tsx  vite-end.d.ts
src/algorithms/: lSystem.ts
src/assets/: README.md
src/components/: 3DCodeCube.tsx  3DFloatingIslands.tsx  3DGalaxy.tsx  3DGallery.tsx  3DNetworkGraph.tsx  3DParticleField.tsx  3DTunnel.tsx  3DWaveform.tsx  AIChatPanel.tsx  AICodeActions.tsx  AICompletion.tsx  AIPredictionPanel.tsx  ARCodeOverlay.tsx  AnimatedLogo.tsx  AssetCompressor.tsx  AssetManager.tsx  AuthDialog.tsx  CDNIntegrationPanel.tsx  Card3D.tsx  CodeChallengesPanel.tsx  CodeComplexityVisualizer.tsx  CodeDNASequencer.tsx  CodeEditor.tsx  CollaborativeAIPairProgrammer.tsx  CompoundCard.tsx  CustomVoiceCommandTrainer.tsx  DataProtectionPanel.tsx  DataVisualization3D.tsx  Demo3DShowcase.tsx  Enhanced3DWelcome.tsx  ErrorBoundary.tsx  ExperimentTrackingPanel.tsx  FeatureShowcase.tsx  FileTree.tsx  FileTree3D.tsx  HolographicCodeViz.tsx  KeyboardShortcuts.tsx  KeyboardShortcutsReference.tsx  LazyComponents.tsx  LiteratureCard.tsx  (+32 more)
src/contexts/: AuthContext.tsx
(+51 files in other folders)
